# ALaGator_Sim_Internal

./: .gitignore  Readme.md
cavepi_adversary/: CMakeLists.txt  package.xml
cavepi_adversary/src/: cavepi_control_node.py  cavepi_depth_control_node.py  cavepi_imu_data_processor.py  cavepi_parser.cpp  cavepi_status_publisher.py  cavepi_teleop_joy.py  cavepi_teleop_keyboard.py
cavepi_adversary/urdf/: cavepi.urdf.xacro
cavepi_interfaces/: CMakeLists.txt  package.xml
cavepi_interfaces/msg/: cavepiInput.msg  cavepiStatus.msg
nemesys_interfaces/: CMakeLists.txt  package.xml
nemesys_interfaces/msg/: nemesysInput.msg  nemesysStatus.msg
nemesys_surveillance/: CMakeLists.txt  package.xml
nemesys_surveillance/.github/: copilot-instructions.md
nemesys_surveillance/launch/: display.launch  localizer.launch  room_ugv.launch
nemesys_surveillance/rviz/: rviz_config.rviz  rviz_config2.rviz
nemesys_surveillance/src/: depth_control_node.py  fiducial_pose_comparator.py  fiducial_pose_estimator.py  imu_data_processor.py  lawnmower_executor.py  nemesys_control_node.py  nemesys_depth_control_node.py  nemesys_imu_data_processor.py  nemesys_status_publisher.py  nemesys_teleop_keyboard.py  parser.cpp  pod_array_mesh_publisher.py  pod_mesh_publisher.py  trajectory_visualizer.py  wp3d_executor.py  wp_array_executor.py  wp_bus_executor.py  wp_helix_executor.py  wp_spoke_executor.py  wp_square_executor.py
nemesys_surveillance/urdf/: nemesys.urdf.xacro
uw_acoustics/: CMakeLists.txt  package.xml
uw_acoustics/include/uw_acoustics/: FractionalDelay.hpp
uw_acoustics/scripts/: hydro_dump.py
uw_acoustics/src/: acoustic_markers.py  acoustic_source_plugin.cpp  acoustic_source_pub_plugin.cpp  fdoa_estimator.py  fdoa_rrd_estimator.py  hydrophone_plugin.cpp  hydrophone_plugin_direction.cpp  hydrophone_subscriber_plugin.cpp  tdoa_estimator.py  ukf_localizer_tdoa_fdoa.py
uw_acoustics/tools/: create_audio.py  doa_gcc_phat.py  hydro_amp_angle_recorder.py  hydro_dump.py  hydro_plot.py  plot_2ch.py  plot_amp_angle.py  plot_gcc_debug.py  plot_hydro_npz.py
