<?xml version="1.0"?>
<package format="2">
  <name>uw_acoustics</name>
  <version>0.0.1</version>
  <description>Waveform-level underwater acoustic source + hydrophones for Gazebo classic</description>
  <maintainer email="adnanabdullah@ufl.edu">Adnan Abdullah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
